public/lite/api/en/r1.3/_sources/generate/namespace_mindspore__dataset__vision.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _namespace_mindspore__dataset__vision:

mindspore::dataset::vision
====================================



Classes
-------


- :ref:`exhale_class_classmindspore_dataset_vision_Affine`

- :ref:`exhale_class_classmindspore_dataset_vision_AutoContrast`

- :ref:`exhale_class_classmindspore_dataset_vision_BoundingBoxAugment`

- :ref:`exhale_class_classmindspore_dataset_vision_CenterCrop`

- :ref:`exhale_class_classmindspore_dataset_vision_Crop`

- :ref:`exhale_class_classmindspore_dataset_vision_CutMixBatch`

- :ref:`exhale_class_classmindspore_dataset_vision_CutOut`

- :ref:`exhale_class_classmindspore_dataset_vision_Decode`

- :ref:`exhale_class_classmindspore_dataset_vision_DvppDecodePng`

- :ref:`exhale_class_classmindspore_dataset_vision_DvppDecodeResizeCropJpeg`

- :ref:`exhale_class_classmindspore_dataset_vision_DvppDecodeResizeJpeg`

- :ref:`exhale_class_classmindspore_dataset_vision_Equalize`

- :ref:`exhale_class_classmindspore_dataset_vision_GaussianBlur`

- :ref:`exhale_class_classmindspore_dataset_vision_HorizontalFlip`

- :ref:`exhale_class_classmindspore_dataset_vision_HWC2CHW`

- :ref:`exhale_class_classmindspore_dataset_vision_Invert`

- :ref:`exhale_class_classmindspore_dataset_vision_MixUpBatch`

- :ref:`exhale_class_classmindspore_dataset_vision_Normalize`

- :ref:`exhale_class_classmindspore_dataset_vision_NormalizePad`

- :ref:`exhale_class_classmindspore_dataset_vision_Pad`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomAffine`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomColor`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomColorAdjust`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomCrop`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomCropDecodeResize`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomCropWithBBox`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomHorizontalFlip`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomHorizontalFlipWithBBox`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomPosterize`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomResize`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomResizedCrop`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomResizedCropWithBBox`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomResizeWithBBox`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomRotation`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomSelectSubpolicy`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomSharpness`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomSolarize`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomVerticalFlip`

- :ref:`exhale_class_classmindspore_dataset_vision_RandomVerticalFlipWithBBox`

- :ref:`exhale_class_classmindspore_dataset_vision_Rescale`

- :ref:`exhale_class_classmindspore_dataset_vision_Resize`

- :ref:`exhale_class_classmindspore_dataset_vision_ResizePreserveAR`

- :ref:`exhale_class_classmindspore_dataset_vision_ResizeWithBBox`

- :ref:`exhale_class_classmindspore_dataset_vision_RGB2BGR`

- :ref:`exhale_class_classmindspore_dataset_vision_RGB2GRAY`

- :ref:`exhale_class_classmindspore_dataset_vision_RGBA2BGR`

- :ref:`exhale_class_classmindspore_dataset_vision_RGBA2RGB`

- :ref:`exhale_class_classmindspore_dataset_vision_Rotate`

- :ref:`exhale_class_classmindspore_dataset_vision_SlicePatches`

- :ref:`exhale_class_classmindspore_dataset_vision_SoftDvppDecodeRandomCropResizeJpeg`

- :ref:`exhale_class_classmindspore_dataset_vision_SoftDvppDecodeResizeJpeg`

- :ref:`exhale_class_classmindspore_dataset_vision_SwapRedBlue`

- :ref:`exhale_class_classmindspore_dataset_vision_UniformAugment`

- :ref:`exhale_class_classmindspore_dataset_vision_VerticalFlip`
